# FileManager

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: FileManager.h
src/platform/: PlatformFactory.cpp  PlatformFactory.h
src/platform/interfaces/: IFileOps.h  IFileWatcher.h  IMemoryMapper.h  IPlatformFactory.h
src/platform/linux/: FileOpsLinux.cpp  FileOpsLinux.h  FileWatcherLinux.h  MemoryMapperLinux.h
src/platform/mac/: FileOpsMac.h  FileWatcherMac.cpp  FileWatcherMac.h  MemoryMapperMac.h
